# heart

./: .gitignore  README.md  SPINE.md  STACK_READINESS.md  arteries_capillaries_implementation_handoff.md  pyproject.toml  rl_harness_heart_handoff.md
contrib/: heart-health-check.sh  heart-health.service  heart-health.timer  stack-smoke.sh
src/heart/: agents_api.py  cli.py  detect.py  env.py  episode.py  events.py  export.py  guard.py  mine.py  pulse.html  pulse.py  reward.py  router.py  runner.py  serve.py  taskspec.py  verify.py
src/heart/training/: datasets.py
tests/: test_heart.py  test_spine.py
tests/golden-events/: arteries.ndjson  capillaries.ndjson  heart.ndjson  plexus.ndjson
