[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heart"
version = "0.1.0"
description = "Orchestration and RL environment runtime for coding agents (drives arteries + capillaries)"
requires-python = ">=3.10"

[project.scripts]
heart = "heart.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
